--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+/* import font */
+@import url("https://use.typekit.net/dqx7qnv.css");
+
+
 /* CSS Custom Properties Definitions */
 
 :root {
@@ -256,6 +260,9 @@ a:focus {
 
 .main-heading {
   font-size: var(--fontSize-7);
+  font-family: poppins, sans-serif;
+  font-weight: 300;
+  font-style: normal;
   margin: 0;
 }
 
