--- a/src/style.css
+++ b/src/style.css
@@ -303,6 +303,12 @@ a:focus {
   font-size: var(--fontSize-2);
 }
 
+.social-icon {
+  font-size: var(--fontSize-4);
+  margin: var(--spacing-1);
+}
+
+
 .bio {
   display: flex;
   margin-bottom: var(--spacing-16);
