--- a/src/style.css
+++ b/src/style.css
@@ -303,8 +303,13 @@ a:focus {
   font-size: var(--fontSize-2);
 }
 
+.social{
+  margin: var(--spacing-1);
+}
+
 .social-icon {
-  font-size: var(--fontSize-4);
+  /* font-size: var(--fontSize-4); */
+  font-size: 1.8rem;
   margin: var(--spacing-1);
 }
 
