--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-/* import font */
+/* import font Quicksand*/
 @import url("https://use.typekit.net/dqx7qnv.css");
 
 
@@ -267,7 +267,7 @@ a:focus {
 
 .main-heading {
   font-size: var(--fontSize-7);
-  font-family: poppins, sans-serif;
+  font-family: quicksand, sans-serif;
   font-weight: 300;
   font-style: normal;
   margin: 0;
@@ -294,13 +294,13 @@ a:focus {
 }
 
 .header-link-home {
-  font-weight: var(--fontWeight-normal);
+  font-weight: var(--fontWeight-medium);
   /* font-family: var(--font-heading); */
-  font-family: poppins, sans-serif;
+  font-family: quicksand, sans-serif;
   /* font-weight: 300; */
   font-style: normal;
   text-decoration: none;
-  font-size: var(--fontSize-2);
+  font-size: var(--fontSize-4);
 }
 
 .social{
